# custom_mp3

./: .env  CMakeLists.txt  REUSE.toml  partitions.csv  sdkconfig  sdkconfig.common
lib/alac/: CMakeLists.txt  LICENCE  README  alac.c  decomp.h
lib/console/: CMakeLists.txt
lib/fatfs/src/: ffconf.h
lib/komihash/include/: komihash.h
lib/libtags/: CMakeLists.txt  ape.c  m4a.c  tags.c  tags.h
lib/lvgl/: lv_conf.h
lib/oled_sh1106/: CMakeLists.txt
lib/oled_sh1106/idf_shim/: Arduino.h  Wire.cpp  Wire.h
lib/wavpack/: CMakeLists.txt  bits.c  metadata.c  unpack.c  wavpack.h  wavpack.lf  wputils.c
lua/: browser.lua  context_menu.lua  file_browser.lua  images.lua  licenses.lua  main.lua  main_menu.lua  playing.lua  playing_menu.lua  playlist_browser.lua  playlist_iterator.lua  settings.lua  styles.lua  theme_dark.lua  theme_hicon.lua  theme_light.lua  track_info.lua  widgets.lua
lua/fonts/: fusion10  fusion12
luals-stubs/: bluetooth.lua  controls.lua  database.lua  filesystem.lua  gpio.lua  i2c.lua  playing_screen_settings.lua  queue.lua
src/codecs/: CMakeLists.txt  alac.cpp  codec.cpp  dr_flac.cpp  mad.cpp  opus.cpp  sample.cpp  source_buffer.cpp  wav.cpp  wavpack.cpp
src/codecs/include/: alac.hpp  codec.hpp  mad.hpp  types.hpp  wavpack.hpp
src/drivers/: CMakeLists.txt  bluetooth.cpp  display.cpp  display_init.cpp  gpios.cpp  haptics.cpp  i2c.cpp  i2s_dac.cpp  littlefs.cpp  nvs.cpp  pca8575.cpp  rda5807.cpp  samd.cpp  sgtl5000.cpp  sh1106.cpp  spi.cpp  storage.cpp  touchwheel.cpp  wm8523.cpp
src/drivers/include/drivers/: board_pins.hpp  display.hpp  display_init.hpp  gpios.hpp  haptics.hpp  i2c.hpp  littlefs.hpp  nvs.hpp  pca8575.hpp  rda5807.hpp  samd.hpp  sgtl5000.hpp  sh1106.hpp  touchwheel.hpp  wm8523.hpp
src/main/: main.cpp
src/tangara/: CMakeLists.txt
src/tangara/app_console/: app_console.cpp
src/tangara/audio/: audio_decoder.cpp  audio_events.hpp  audio_fsm.cpp  audio_fsm.hpp  fatfs_source.cpp  fatfs_stream_factory.cpp  fatfs_stream_factory.hpp  playlist.cpp  playlist.hpp  processor.cpp  readahead_runner.cpp  (+5 more)
src/tasks/: tasks.cpp  tasks.hpp
tools/cmake/: common.cmake
tools/fonts/: mkfonts.sh
(+66 files in other folders)
